fix: remove extra spacing in portfolio image slider

--- a/styles/common.css
+++ b/styles/common.css
@@ -649,9 +649,8 @@ footer {
 .portfolio-item {
     height: 100%;
     width: auto;
-    min-width: 350px; 
     flex: 0 0 auto;
-    padding: 30px;
+    padding: 15px;
     background: var(--black); /* Standard background for singles */
     position: relative;
     display: flex;
